--- a/js_example/index.html
+++ b/js_example/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Creator Compiler JS Example</title>
+    <title>CREATOR Assembler JS Example</title>
   </head>
   <body>
     <noscript>This page contains webassembly and javascript content, please enable javascript in your browser.</noscript>
